--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
         "drupal/mediteran": "^1.30",
+        "drupal/sdc_styleguide": "^1.0@beta",
         "drupal/webform": "^6.2",
         "drush/drush": "^12.1"
     },
