--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/core-recommended": "^10.1",
         "drupal/mediteran": "^1.30",
         "drupal/sdc_styleguide": "^1.0@beta",
+        "drupal/ui_patterns": "^1.7",
         "drupal/webform": "^6.2",
         "drush/drush": "^12.1"
     },
